# DocumentHelper

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  pyproject.toml
documenthelper/: embeddings.py  utils.py  va.py
documenthelper/model_config/: llama-chat-config.json  llama-embedding-config.json  llama-shared.json
experiment/: langchain_setup.ipynb
tests/: test_va.py
tests/test_documenthelper/: test_utils.py
