[tool.poetry]
name = "documenthelper"
version = "0.1.0"
description = ""
authors = ["Georgios Soteriou"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.0"
chromadb = "^0.4.8"
langchain = "^0.0.279"
bs4 = "^0.0.1"
tiktoken = "^0.4.0"
sentence-transformers = "^2.2.2"
llama-cpp-python = "^0.1.83"
pypdf = "^3.15.5"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
precommit-hook = "^0.2.1"
ipykernel = "^6.25.1"
pandas = "^2.1.0"
datasets = "^2.14.4"
huggingface-hub = "^0.16.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
