[tool.poetry]
name = "documenthelper"
version = "0.1.0"
description = ""
authors = ["Georgios Soteriou"]
readme = "README.md"
license = "MIT"
packages = [{include = "documenthelper"}]

[tool.poetry.scripts]
va = "documenthelper.va:main"
embeddings = "documenthelper.embeddings:main"

[tool.poetry.dependencies]
python = "^3.10"
chromadb = "^0.4.8"
langchain = "^0.0.279"
bs4 = "^0.0.1"
llama-cpp-python = "^0.1.83"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
ipykernel = "^6.25.1"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
